--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-carousel": "^1.0.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
