--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "huy",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000/",
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
@@ -10,12 +11,16 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
+    "@mui/x-data-grid-generator": "^5.7.0",
+    "@mui/x-data-grid-pro": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-grid-carousel": "^1.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
